--- a/rules/apt/apt_empiremonkey.yml
+++ b/rules/apt/apt_empiremonkey.yml
@@ -29,4 +29,4 @@ detection:
             - '*/i:%APPDATA%\logs.txt scrobj.dll'
         Description: 
             - Microsoft(C) Registerserver
-        
+    condition: selection_cutil and selection_regsvr32
